<!--
  ~ Copyright (c) 2022-2024 Universitat Politècnica de València
  ~ Authors: José Ramón Bermejo Canet
  ~                jrber222@gmail.com
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->

<resources>
    <string name="app_name">Meds
        Scheduler</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tf_login_email_hint">Introduce tu email…</string>
    <string name="tf_login_password_hint">Introduce tu contraseña…</string>
    <string name="tv_login_email">Email:</string>
    <string name="tv_login_password">Contraseña:</string>
    <string name="b_login">INICIAR SESIÓN</string>
    <string name="web_client_id">763236116994-60rbnod6u9420llf9athned097a7jlrp.apps.googleusercontent.com</string>
    <string name="emptyFieldsLoginOrRegisterMessage">Se deben cumplimentar todos los campos</string>
    <string name="accept">Aceptar</string>
    <string name="userNotFoundMessage">Las credenciales no coinciden con ningún usuario</string>
    <string name="signInWithGoogleWasNotPossible">No se pudo iniciar sesión con su cuenta de Google</string>
    <string name="signOutTitle">Cerrar sesión</string>
    <string name="signInTitle">Iniciar sesión</string>
    <string name="linkRegister">¿No tienes cuenta? Regístrate</string>
    <string name="b_register">REGISTRARSE</string>
    <string name="registerTitle">Registrarse</string>
    <string name="registerFail">Ya existe en el sistema un usuario con el mismo email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="password_length_insufficient">La contraseña debe tener 8 caracteres como mínimo</string>
    <string name="alarmsFragmentTitle">Alarmas</string>
    <string name="newAlarm">Crear alarma</string>
    <string name="next">SIGUIENTE</string>
    <string name="last">ANTERIOR</string>
    <string name="tvPillQuantity">Número de pastillas: </string>
    <string-array name="pill_quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="packet_quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="mililiters_quantity_array">
        <item>2.5</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string name="tvFrequence">Tomar dosis cada: </string>
    <string-array name="frequence_array">
        <item>@string/hours24</item>
        <item>@string/hours12</item>
        <item>@string/hours1</item>
        <item>@string/minutes30</item>
        <item>@string/minutes15</item>
    </string-array>
    <string name="hours24">24 horas</string>
    <string name="hours12">12 horas</string>
    <string name="hours1">1 horas</string>
    <string name="minutes30">30 minutos</string>
    <string name="minutes15">15 minutos</string>
    <string name="medicinesListTitle">Medicinas</string>
    <string name="newMedicine">Crear medicina</string>
    <string name="medicineCreationName">Nombre:</string>
    <string name="medicineNameHint">"Nombre: "</string>
    <string name="tvMedicineDescriptionLabel">"Descripción: "</string>
    <string name="tvSecondaryEffects">Efectos secundarios: </string>
    <string name="bCrearMedicamento">Crear medicamento</string>
    <string name="emptyFieldsMedicineCreation">Se debe asignar un nombre y una descripción al nuevo medicamento</string>
    <string name="tvIsUserDoctor">¿Es usted médico?</string>
    <string name="no_upper_cases_at_email">El email no puede contener ninguna mayúscula</string>
    <string name="mililitres">Mililitros: </string>
    <string name="packet">Número de sobres: </string>
    <string name="pill">Número de pastillas: </string>
    <string name="tvMililitres">Mililitros</string>
    <string name="tvPacket">Sobres</string>
    <string name="tvPill">Pastillas</string>
    <string name="showPill">pastilla/s</string>
    <string name="showPacket">sobre/s</string>
    <string name="showMl">mililitro/s</string>
    <string name="pillAbrev" translatable="false">P</string>
    <string name="packetAbrev" translatable="false">Pack</string>
    <string name="MlAbrev" translatable="false">Ml</string>
    <string name="time_medicine">Hora de la medicina!!</string>
    <string name="time_medicine_message">Ha llegado el momento de que te tomes la dosis correspondiente</string>
    <string name="welcomeVoiceMessage">Hola, bienvenido a la aplicación</string>
    <string name="medicineSelectionVoiceMessage">Por favor, selecciona un medicamento</string>
    <string name="medicinePresentationVoiceMessage">Ahora, selecciona la presentación del medicamento</string>
    <string name="dosageSelectionVoiceMessage">Selecciona una dosis</string>
    <string name="frequencySelectionVoiceMessage">Por último, selecciona la frecuencia de administración y la hora de inicio</string>
    <string name="alarmCreated">Se ha creado la alarma correctamente</string>
    <string name="newAppointment">Nueva cita</string>
    <string name="newAppointmentsFragment">Citas</string>
    <string name="pharmacyFragmentTitle">Farmacias</string>
    <string name="completedDosesTitle">"Dosis administradas: "</string>
    <string name="medicineTvTitle">"Medicamento: "</string>
    <string name="instructionTvTitle">"Pauta: "</string>
    <string name="dosagesOnARowTitle">"Dosis notificadas: "</string>
    <string name="alarmDetailTitle">Detalle de la alarma</string>
    <string name="everyWord">cada</string>
    <string name="tv_login_surname">Apellidos:</string>
    <string name="tv_login_name">Nombre:</string>
    <string name="name_user_hint">Introduce tu nombre…</string>
    <string name="surnames_user_hint">Introduce tus apellidos…</string>
    <string name="alarmCreationProgressBar_Description" translatable="false">Barra de progreso para indicar el grado de progreso en la creación de una alarma</string>
    <string name="navHostFragment_Description" translatable="false">Contenedor de los fragments que conforman el proceso de creación de una alarma</string>
    <string name="firstLine_Description" translatable="false">Linea separatoria de apartados de la interfaz de detalle de alarma</string>
    <string name="doctorNavHostFragment_Description" translatable="false">Contenedor de fragments que conforman la interfaz de usuario de un doctor</string>
    <string name="doctorBottomNavigationView_Description" translatable="false">Barra inferior que permite al usuario navegar entre los distintos fragments</string>
    <string name="recyclerViewDoctors" translatable="false">Lista de doctores a los que el usuario se puede suscribir</string>
    <string name="bLogin_Description" translatable="false">Botón para iniciar sesión</string>
    <string name="appbar_Description" translatable="false">Barra de la aplicación</string>
    <string name="bottomNavigationView_Description" translatable="false">Barra inferior que permite al usuario navegar por los distintos fragments</string>
    <string name="listView_Description" translatable="false">Lista donde se muestran los efectos secundarios posibles</string>
    <string name="bCrearMedicamento_Description" translatable="false">Botón para crear medicamento</string>
    <string name="chkBoxIsUserDoctor_Description" translatable="false">Checkbox para indicar si el usuario es doctor</string>
    <string name="bRegister_Description" translatable="false">Botón para registrarse</string>
    <string name="cardView_Description" translatable="false">Carta que contiene todos los datos a representar</string>
    <string name="recyclerViewPendingAppointments_Description" translatable="false">Lista con las citas del paciente</string>
    <string name="recyclerViewDoctorAppointments_Description" translatable="false">Lista de las citas pendientes de un doctor</string>
    <string name="buttonNext_Description" translatable="false">Botón para pasar al siguiente fragment</string>
    <string name="buttonBefore_Description" translatable="false">Botón para volver al fragment anterior</string>
    <string name="pillQuantitySpinner_Description" translatable="false">Spinner para seleccionar una dosis determinada</string>
    <string name="frequence_spinner_Description" translatable="false">Spinner para seleccionar una frecuencia determinada</string>
    <string name="timePickerFrequence_Description" translatable="false">TimePicker para seleccionar la hora de comienzo de la alarma</string>
    <string name="medicinePresentationRecyclerView_Description" translatable="false">Lista de presentaciones de medicamentos</string>
    <string name="recyclerViewMedicines_Description" translatable="false">Lista de medicamentos a seleccionar para la alarma</string>
    <string name="recyclerViewAlarms_Description" translatable="false">Lista de alarmas</string>
    <string name="healthAdvice_image_Description" translatable="false">Imagen que se muestra en el popup de consejos de salud</string>
    <string name="existing_medicine_name">Ya existe un medicamento con el nombre proporcionado</string>
    <string name="patient_critical_effects">Efectos críticos para el usuario:</string>
    <string name="new_medicine_added">Se ha insertado una nueva medicina</string>
    <string name="logo_description">Descripción del logo</string>
    <string name="medicineSelection">Selecciona un medicamento</string>
    <string name="medicinePresentation">Selecciona la presentación del medicamento</string>
    <string name="dosageSelection">Selecciona una dosis</string>
    <string name="frequencySelection">Selecciona la hora de inicio y la frecuencia</string>
    <string name="user_data_agreement">Al aceptar, estás otorgando tu consentimiento para el tratamiento de tus datos personales. ¿Aceptas?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="existing_appointment_title">Cita ya existente</string>
    <string name="existing_appointment_message">Ya existe una cita en los 30 minutos anteriores a los seleccionados</string>
    <string name="selectADoctor">Selecciona un médico</string>
</resources>